# baghive-sandbox

./: .gitignore  README.md  compose.yaml  podman-compose.yaml  requirements.txt
config/postgres/: postgres-creds-example.env  schema.sql
config/pulsar/: broker.conf
design/: Auth.md  Auth.puml  Demo.md
docs/: UserStories.md
services/booking/: .clangd  CMakeLists.txt  CMakePresets.json  README.md
services/booking/src/: main.cpp
services/demo/: client.py  server.py
src/client/: client.py  server.py
src/server/: client.py  server.py
